Fixed text color in CodeMirror dark mode

--- a/skinStyles/extensions/VisualEditor/ext.visualEditor.core.less
+++ b/skinStyles/extensions/VisualEditor/ext.visualEditor.core.less
@@ -76,4 +76,8 @@
 			background-color: @dark-bg-0;
 		}
 	}
+
+	.ve-init-mw-desktopArticleTarget .CodeMirror {
+		color: @dark-text-90;
+	}
 }
